--- a/style.css
+++ b/style.css
@@ -31,15 +31,17 @@ nav {
     display: flex;
 	align-items: center;
     justify-content: space-between;
-    padding: 16px 60px;
-}
-.logo {
-    color: white;
-    text-decoration: none;
-    font-size: 1.5rem;
+    padding: 10px 60px;
 }
 nav ul {
     list-style: none;
+}
+nav img {
+	height: inherit;
+	max-height: 100px;
+}
+.logo {
+	height: 6vw;
 }
 .nav-links li {
     display: inline-block;
@@ -72,8 +74,8 @@ nav ul {
     color: white;
 }
 .hero h1 {
-    font-size: 4vw;
 	margin: 0;
+    font-size: 4vw;
 	text-align: left;
 }
 .hero h2 {
@@ -223,7 +225,7 @@ nav ul {
 }
 
 /* Footer Section */
-.footer { background-color: #333; padding: 60px; }
+.footer { background-color: #222; padding: 60px; }
 .footer a:hover {color: white; }
 .grid-container {
     display: grid;
@@ -239,12 +241,12 @@ nav ul {
 }
 .logo-footer {
     grid-area: logo;
+	padding-top: 24px;
 }
 .logo-footer img {
     width: 100%;
     max-width: 200px;
     height: auto;
-	margin-top: -24px;
 }
 .contact-info {
     grid-area: contact;
@@ -302,7 +304,7 @@ nav ul {
 @media (min-width: 480px)and (max-width: 840px) {
 	/* Navigation */
 	nav { padding: 20px; }
-	nav ul { font-size: 1.6vw; }
+	nav ul { font-size: 1.9vw; }
 	/* Hero Section */
 	.hero { padding: 80px 60px; background-image: linear-gradient(to right, black 400px, rgba(0,0,0,0)), url('../images/black-right.jpeg'); }
 	.hero h1 { font-size: 2.5rem; }
@@ -344,11 +346,12 @@ nav ul {
 /* Mobile */
 @media (max-width: 480px) {
 	/* Navigation */
-	nav { padding: 20px; }
+	nav { padding: 8px 20px 0; }
 	nav ul { display: none; }
+    .logo { height: 40px; }
 	/* Hero Section */
 	.hero { padding: 20px; background: black; }
-	.hero h1 { font-size: 2.3rem; margin: -10px 0;}
+	.hero h1 { font-size: 2.3rem; line-height: 1; }
 	.hero h2 { font-size: 1.2rem; max-width: 100%; }
 	.hero p { font-size: 18px; min-width: 240px; }
 	#mob-hero {
@@ -359,6 +362,7 @@ nav ul {
 	}
 	/* Fleet Section */
 	.fleet { padding: 0 20px 40px; }
+	.fleet h2 { margin: 0; }
 	.fleet img {margin-bottom: 20px; }
 	.fleet-grid {
 		grid-template-areas: 
@@ -376,15 +380,15 @@ nav ul {
 	#ul-special { padding-left: 80px; }
 	#ul-bus { padding-left: 80px; }
 	/* Testimonials Section */
-	.testimonials { padding: 20px 20px; }
+	.testimonials { padding: 4px 20px 40px; }
 	.testimonials-columns { column-count: 1; }
 	/* About Section */
-	.about { display: block; padding: 40px 20px; }
+	.about { display: block; padding: 0 0 50px; }
 	.about-image {padding: 0; margin: 0; }
-	.about-content { padding: 0; }
+	.about-content { padding: 0 20px; }
 	.about-content a { display: block; margin: 16px 0; text-align: center; }
 	/* Footer Section */
-	.footer { padding: 20px; }
+	.footer { padding: 60px 20px; }
 	.grid-container {
 		grid-template-areas: 
 			'logo'
@@ -394,7 +398,7 @@ nav ul {
 			'legal'
 			'copyright';
 	}
-	.logo-footer { margin-bottom: -48px; }
+	.logo-footer { padding: 0; }
 	.site-map { padding: 0; }
 	.social-media { padding: 16px 0; justify-content: flex-start; }
 	.social-media svg { margin-right: 20px; }
