--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {
 /* Navigation */
 nav {
     display: flex;
-	align-items: center;
+    align-items: center;
     justify-content: space-between;
     padding: 10px 60px;
 }
@@ -41,7 +41,7 @@ nav img {
 	max-height: 100px;
 }
 .logo {
-	height: 6vw;
+	height: 5vw;
 }
 .nav-links li {
     display: inline-block;
@@ -67,11 +67,10 @@ nav img {
 
 /* Hero Section */
 .hero {
-    background-image: linear-gradient(rgba(0,0,0,0) 60%, black), url('../images/black-right.jpeg');
+	background-image: linear-gradient(rgba(0,0,0,0) 60%, black), url(images/escalade-hero-6.jpg);
     background-size: cover;
-    background-position: right;
-	padding: 160px 0px 80px 120px;
-    color: white;
+	background-position: 25% 0%;
+    padding: 12vw 8vw;
 }
 .hero h1 {
 	margin: 0;
@@ -86,6 +85,7 @@ nav img {
     font-size: 1.4rem;
 	min-width: 300px;
 	max-width: 40%;
+	color: white;
 }
 .hero a {
 	display: inline-block;
@@ -117,7 +117,7 @@ nav img {
 
 /* Fleet Section */
 .interior-container {
-	background-image: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #222), url('../images/interior.jpg');
+	background-image: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #222), url(images/interior.jpg);
     background-size: cover;
 	background-position: 0 15%;
 	width: 100%;
@@ -306,7 +306,7 @@ nav img {
 	nav { padding: 20px; }
 	nav ul { font-size: 1.9vw; }
 	/* Hero Section */
-	.hero { padding: 80px 60px; background-image: linear-gradient(to right, black 400px, rgba(0,0,0,0)), url('../images/black-right.jpeg'); }
+	.hero { padding: 80px 60px; background-image: linear-gradient(to right, black 400px, rgba(0,0,0,0)), url(images/escalade-hero-3.png); background-position: bottom; }
 	.hero h1 { font-size: 2.5rem; }
 	.hero h2 { font-size: 1.5rem; }
 	.hero p { font-size: 1.2rem; min-width: 270px; }
@@ -355,7 +355,7 @@ nav img {
 	.hero h2 { font-size: 1.2rem; max-width: 100%; }
 	.hero p { font-size: 18px; min-width: 240px; }
 	#mob-hero {
-    	background-image: linear-gradient(rgba(0,0,0,0) 60%, black), url('../images/escalade-hero.webp');
+    	background-image: linear-gradient(rgba(0,0,0,0) 60%, black), url(images/escalade-hero.webp);
     	background-size: cover;
         background-position: center;
         height: 400px;
