--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ nav img {
 	color: darkgoldenrod;
 }
 
+/* Social Proof Section */
 /* Book Section */
 .div-spacing { height: 60px; }
 /* Steps Section */
@@ -152,7 +153,7 @@ nav img {
 #img-bus { grid-area: img-bus; }
 .fleet-grid ul { padding-left: 10vw; }
 .fleet-grid li { margin-bottom: 8px; }
-.fleet-grid img { width: 120px; margin: -24px auto 0; }
+.fleet-grid img { height: 10vw;  margin: 0 auto; }
 
 /* Testimonials Section */
 .testimonials {
@@ -207,10 +208,6 @@ nav img {
     padding: 80px 40px;
 	color: white;
 }
-.about a {
-    font-size: 18px;
-    margin-right: 8px;
-}
 .about-image, .about-content {
     flex: 1;
     padding: 0 20px;
@@ -222,6 +219,15 @@ nav img {
 }
 .about-content h2 {
     margin-bottom: 16px;
+}
+.about-content span {
+	font-weight: bold;
+	font-style: italic;
+	color: gold;
+}
+.about-content a {
+	font-size: 18px;
+    margin-right: 8px;
 }
 
 /* Footer Section */
@@ -311,6 +317,7 @@ nav img {
 	.hero h2 { font-size: 1.5rem; }
 	.hero p { font-size: 1.2rem; min-width: 270px; }
 	/* Fleet Section */
+	.fleet { padding: 0 0 80px; }
 	.fleet-grid {
 		grid-template-areas: 
 			'h2-suv h2-special'
@@ -320,7 +327,8 @@ nav img {
 			'ul-bus ul-bus'
 			'img-bus img-bus';
     }
-	#ul-bus { margin: 16px auto; padding: 0; }
+	.fleet-grid ul { margin: 20px auto; }
+	.fleet-grid img { min-height: 100px; height: 20vw; }
 	/* Testimonials Section */
 	.testimonials-columns { column-count: 1; }
 	/* About Section */
@@ -361,9 +369,10 @@ nav img {
         height: 400px;
 	}
 	/* Fleet Section */
-	.fleet { padding: 0 20px 40px; }
+	.fleet { padding: 0 0 40px; }
 	.fleet h2 { margin: 0; }
-	.fleet img {margin-bottom: 20px; }
+	.fleet ul { margin: 12px auto; }
+	.fleet img { margin-bottom: 20px; height: 33vw; }
 	.fleet-grid {
 		grid-template-areas: 
 			'h2-suv'
@@ -376,9 +385,6 @@ nav img {
 			'ul-bus'
 			'img-bus';
     }
-	#ul-suv { padding-left: 80px; }
-	#ul-special { padding-left: 80px; }
-	#ul-bus { padding-left: 80px; }
 	/* Testimonials Section */
 	.testimonials { padding: 4px 20px 40px; }
 	.testimonials-columns { column-count: 1; }
