--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ nav img {
 
 /* Book Section */
 .div-spacing { height: 60px; }
+.return { text-align: center; padding: 80px 0; }
 /* Steps Section */
 /* Services Section */
 
