--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
 	text-align: center;
 	color: white;
 }
-h2 {
+h3 {
 	font-size: 1.5rem;
 }
 a {
@@ -24,6 +24,9 @@ a {
 .container {
 	margin-left: auto;
 	margin-right: auto;
+	color: darkgray;
+	text-align: center;
+	height: 80vh;
 }
 
 /* Navigation */
